# Botanio

./: .gitignore  .gitlab-ci.yml  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  conanfile.txt
cmake/modules/: FindBotan.cmake
data/: cert.pem  key.pem
include/log/: logger.h  logging.h
include/net/: connection.h  listener.h  observer.h
include/tls/: context.h  credentials.h  policy.h  transmitter.h
src/: CMakeLists.txt  botanio.cpp
src/log/: CMakeLists.txt  logger.cpp  logging.cpp
src/net/: CMakeLists.txt  connection.cpp  listener.cpp
src/tls/: CMakeLists.txt  context.cpp  credentials.cpp  policy.cpp
